# personal-chat-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/agent/: graph.py  nodes.py  prompt.py  state.py
app/api/api_service/: chat_service.py  register_service.py
app/api/routes/: chat_router.py  register_router.py
app/core/: config.py
app/db/: checkpointer.py
app/schema/: chat_schema.py  register_schema.py
app/services/: pinecone_service.py  supabase_service.py
app/tools/: github_tool.py  rag_tool.py  user_capture_tool.py
scripts/: __init__.py  indexing.py  ingest.py
