[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.0",
    "langchain-pinecone>=0.2.13",
    "pinecone>=7.3.0",
    "pypdf>=6.10.2",
]
