[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.0",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-postgres>=3.0.5",
    "pinecone>=7.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic[email]>=2.13.3",
    "pypdf>=6.10.2",
    "supabase>=2.28.3",
    "uvicorn>=0.46.0",
]
