[project]
name = "code"
version = "1.0.0"
description = "A plug-and-play ReAct agent for developer portfolios. Built with LangGraph, RAG, Python, FastAPI and Next.js."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "debugpy>=1.8.20",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.0",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.1.9",
    "pinecone>=7.3.0",
    "psycopg[binary]>=3.3.3",
    "pypdf>=6.10.2",
    "slowapi>=0.1.9",
    "supabase>=2.28.3",
    "uvicorn>=0.46.0",
]
